test/2/type/sub-field-field.err
type error: test/2/type/sub-field-field.ploy:1:24-31: annotated: actual struct has 3 fields; expected 2. actual type: (Int Int Int)
  s:(Int (Int Int)) = (0 (0 0 0))
                         ~~~~~~~
note: test/2/type/sub-field-field.ploy:1:8-17: expected type: (Int Int)
  s:(Int (Int Int)) = (0 (0 0 0))
         ~~~~~~~~~
